# human-parser-comfyui-node

./: HumanParserATRCustomNode.py  HumanParserLIPCustomNode.py  HumanParserPascalCustomNode.py  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish.yml
schp/modules/: functions.py
schp/modules/src/: inplace_abn.cpp  inplace_abn_cpu_only.cpp
