[project]
name = "human-parser-comfyui-node"
description = "A ComfyUI node to automatically extract masks for body regions and clothing/fashion items. Made with 💚 by the CozyMantis squad."
version = "1.0.0"
license = "LICENSE"
dependencies = ["ninja", "torch", "opencv-python", "numpy"]

[project.urls]
Repository = "https://github.com/cozymantis/human-parser-comfyui-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cozymantis"
DisplayName = "Human Body and Clothes Parser - Segmentation ComfyUI Node"
Icon = ""
